--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,7 @@
     padding-right: 0px !important ;
   }
   .bn-default-styles h1 {
-    font-size: 24px !important;
+    font-size: 22px !important;
   }
 
   .bn-default-styles h3 {
@@ -54,6 +54,15 @@
 
   [data-content-type="divider"] hr {
     border-top: 1px solid #00ef86 !important;
+  }
+
+  /* 모바일에서만 줄바꿈 (선택사항) */
+  @media (max-width: 768px) {
+    .bn-block-content pre {
+      /* white-space: pre-wrap !important;
+      word-wrap: break-word !important; */
+      font-size: 12px;
+    }
   }
 }
 
